fix (client): Basic page main grid slightly too large

--- a/client/src/Styles/PageBasic.css
+++ b/client/src/Styles/PageBasic.css
@@ -4,7 +4,7 @@
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
     align-items: center;
-    height: 70%;
+    height: 68%;
     /* gap: 10px; */
     font-size: 20vh;
 }
